--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "latest",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
