--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
